# faux-genie

./: .gitignore  Readme.md  docker-compose.yml
faux/: Readme.md  pyproject.toml  requirements.txt
faux/faux/: __init__.py  main.py
faux/faux/config/: products.json
faux/faux/core/: faux_utils.py  models.py
faux/faux/database/: base.py  db_models.py  db_utils.py
faux/faux/simulator/: sim_helpers.py  sim_utils.py
ideas/: scratchpad.md
