[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "faux"
version = "0.0.1"
authors = [
  { name="Emmanuel Ogunwede", email="ogunwedeemmanuel@gmail.com" },
]
description = "Custom e-commerce fake events data generator"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages]
find = {}